# AutoText

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  initial_prompt.txt
models/: addYourModelsHere.txt
rwkv.cpp/ggml/: README.md
rwkv.cpp/ggml/src/: ggml-alloc.c
rwkv.cpp/rwkv.cpp_tmp/: CMakeLists.txt
rwkv.cpp/rwkv.cpp_tmp/ggml/src/: ggml.c
src/: Application.cpp  Application.hpp  Model.cpp  Model.hpp  TextEditor.cpp  TextEditor.hpp  TextGenerator.cpp  TextGenerator.hpp  main.cpp
tokenizer/: CMakeLists.txt  Cargo.toml  tokenizer.cpp  tokenizer.hpp
tokenizer/src/: lib.rs
